struttura prima row

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Ticket</title>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="row">
+        <h1 class="text_uppercase">Calcola il prezzo del tuo biglietto</h1>
+        <div class="col">
+          <label for="nomePasseggero"></label>
+          <input id="nomePasseggero" type="text" name="" value="">
+        </div>
+        <div class="col">
+          <label for="kmNecessari"></label>
+          <input id="kmNecessari" type="number" name="" value="">
+        </div>
+        <div class="col">
+          <label for="fasciaEta"></label>
+          <select id="fasciaEta" name="">
+            <option value="">Maggiorenne</option>
+            <option value="">Minorenne</option>
+            <option value="">Over 65</option>
+          </select>
+        </div>
+      </div>
+      <div class="row"></div>
+    </div>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
