--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="row">
-        <h1 class="text_uppercase">Calcola il prezzo del tuo biglietto</h1>
-        <div class="col">
-          <label for="nomePasseggero"></label>
-          <input id="nomePasseggero" type="text" name="" value="">
+      <h1 class="text_uppercase text_center">Calcola il prezzo del tuo biglietto</h1>
+      <div class="form">
+        <div class="row">
+          <div class="col">
+            <label for="nomePasseggero"></label>
+            <input id="nomePasseggero" type="text" name="" value="">
+          </div>
+          <div class="col">
+            <label for="kmNecessari"></label>
+            <input id="kmNecessari" type="number" name="" value="">
+          </div>
+          <div class="col">
+            <label for="fasciaEta"></label>
+            <select id="fasciaEta" name="">
+              <option value="">Maggiorenne</option>
+              <option value="">Minorenne</option>
+              <option value="">Over 65</option>
+            </select>
+          </div>
         </div>
-        <div class="col">
-          <label for="kmNecessari"></label>
-          <input id="kmNecessari" type="number" name="" value="">
-        </div>
-        <div class="col">
-          <label for="fasciaEta"></label>
-          <select id="fasciaEta" name="">
-            <option value="">Maggiorenne</option>
-            <option value="">Minorenne</option>
-            <option value="">Over 65</option>
-          </select>
-        </div>
+        <div class="row"></div>
       </div>
-      <div class="row"></div>
     </div>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
