display flex anche a col

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <div class="form">
         <div class="row">
           <div class="col">
-            <label for="nomePasseggero"></label>
+            <label for="nomePasseggero">Nome Cognome</label>
             <input id="nomePasseggero" type="text" name="" value="">
           </div>
           <div class="col">
-            <label for="kmNecessari"></label>
+            <label for="kmNecessari">Km da percorrere</label>
             <input id="kmNecessari" type="number" name="" value="">
           </div>
           <div class="col">
-            <label for="fasciaEta"></label>
+            <label for="fasciaEta">Fascia d'età</label>
             <select id="fasciaEta" name="">
               <option value="">Maggiorenne</option>
               <option value="">Minorenne</option>
