--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="row">
           <div class="col">
             <label for="nomePasseggero">Nome Cognome</label>
-            <input id="nomePasseggero" type="text" name="" value="">
+            <input id="nomePasseggero" type="text" name="" value="" placeholder="Nome passeggero">
           </div>
           <div class="col">
             <label for="kmNecessari">Km da percorrere</label>
-            <input id="kmNecessari" type="number" name="" value="">
+            <input id="kmNecessari" type="number" name="" value="" placeholder="Km da percorrere">
           </div>
           <div class="col">
             <label for="fasciaEta">Fascia d'età</label>
