--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             </select>
           </div>
         </div>
+        <div class="container_button">
+          <button class="btn">Genera</button>
+          <button class="btn">Annulla</button>
+        </div>
         <div class="row"></div>
       </div>
     </div>
