--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             </select>
           </div>
         </div>
-        <div class="container_button">
+        <div class="row">
           <button class="btn">Genera</button>
           <button class="btn">Annulla</button>
         </div>
-        <div class="row"></div>
       </div>
+      <div class="row"></div>
     </div>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
