inizio struttura seconda sez

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
           <button class="btn">Annulla</button>
         </div>
       </div>
-      <div class="row"></div>
+      <h3 class="text_uppercase text_center">Il tuo biglietto</h3>
+      <div class="form">
+      <div class="container_row">
+        <div class="col nome_passeggero">
+          <h4 class="text_uppercase text_center">nome passeggero</h4>
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
     </div>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
