--- a/index.html
+++ b/index.html
@@ -37,8 +37,26 @@
       <div class="container_row">
         <div class="col nome_passeggero">
           <h4 class="text_uppercase text_center">nome passeggero</h4>
+          <div id="nome-passeggero"></div>
         </div>
-        <div class="col"></div>
+        <div class="col">
+          <table>
+            <thead>
+              <tr>
+                <th>Offerta</th>
+                <th>Carrozza</th>
+                <th>Codice CP</th>
+                <th>Costo Biglietto</th>
+              </tr>
+            </thead>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
     </div>
