--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
           <div class="col">
             <label for="fasciaEta">Fascia d'età</label>
             <select id="fasciaEta" name="">
-              <option value="">Maggiorenne</option>
-              <option value="">Minorenne</option>
-              <option value="">Over 65</option>
+              <option value="maggiorenne">Maggiorenne</option>
+              <option value="minorenne">Minorenne</option>
+              <option value="over 65">Over 65</option>
             </select>
           </div>
         </div>
         <div class="row">
-          <button class="btn">Genera</button>
-          <button class="btn">Annulla</button>
+          <button id="genera" class="btn">Genera</button>
+          <button id="annulla" class="btn">Annulla</button>
         </div>
       </div>
       <h3 class="text_uppercase text_center">Il tuo biglietto</h3>
