prove con collegamento offerte

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               </tr>
             </thead>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td id="offerta"></td>
+              <td id="carrozza"></td>
+              <td id="codice_cp"></td>
+              <td id="costo_ticket"></td>
             </tr>
           </table>
         </div>
