--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="container_row">
         <div class="col nome_passeggero">
           <h4 class="text_uppercase text_center">nome passeggero</h4>
-          <div id="nome-passeggero"></div>
+          <div id="nome-passeggero" class="text_center"></div>
         </div>
         <div class="col">
           <table>
