--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="wrapper">
       <h1 class="text_uppercase text_center">Calcola il prezzo del tuo biglietto</h1>
-      <div class="form">
+      <div class="form show">
         <div class="row">
           <div class="col">
             <label for="nomePasseggero">Nome Cognome</label>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <h3 class="text_uppercase text_center">Il tuo biglietto</h3>
-      <div class="form">
+      <div class="form hidden" id="ticket_container">
       <div class="container_row">
         <div class="col nome_passeggero">
           <h4 class="text_uppercase text_center">nome passeggero</h4>
